feat: Add teachers CRUD
